@@ -73,7 +73,7 @@ $cfg =
      'url' => ':TEMPLETON_URL:/templeton/v1/ddl',
      'status_code' => 200,
      'post_options' => ['user.name=:UNAME:','exec=create table templetontest_tab2(i int, j bigint) STORED AS rcfile;'],
-     'json_field_substr_match' => { 'exitcode' => '^9$'}
+     'json_field_substr_match' => { 'exitcode' => '^1$'}
     },
     {
                                 #describe table
@@ -732,7 +732,7 @@ STORED AS rcfile
      'num' => 11,
      'method' => 'GET',
      'url' => ':TEMPLETON_URL:/templeton/v1/ddl/database/default/table/templetontest_parts/partition/dt=%2720120101%27,country=%27IN%27?user.name=:UNAME:',
-     'status_code' => 500, #should return 404 when bug is fixed
+     'status_code' => 404,
      'json_field_substr_match' => 
        {
         'error' => 'Partition.*for table templetontest_parts does not exist'
